Fix build (#58)
* WIP. Intermediate commit

* Enable tests

* Cleanup

* Fix linter

* Fix trivy

* Save username to woody metadata

* Fix linter

* Add one more test

* Feedback edits